--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -30,6 +30,10 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+      - name: Run typescript lint and format check
+        run: npm run lint:ts
+      - name: Run styles lint and format check
+        run: npm run lint:css
       # Step 3 - Add tests and linting here
   deploy:
     needs: [build, test]
