Step 5 - add secret

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run styles lint and format check
         run: npm run lint:css
       - name: "Hello world when tests run"
-        run: echo "Hello $FIRST_NAME $MIDDLE_NAME $LAST_NAME, today tests worked!"
+        run: echo "Hello $FIRST_NAME $MIDDLE_NAME $LAST_NAME, today tests worked! Your cool password is ${{secrets.PASSWORD}}"
         env:
           FIRST_NAME: Hanna
           MIDDLE_NAME: The
