--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           images: acn_workshop/coffe_app
       - name: Push docker image
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
